--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,8 @@ dependencyResolutionManagement {
 rootProject.name = "Design Systems"
 include ':app'
 
+include ':feature'
+
 include ':ds:core'
 
 include ':ds:component:button'
