--- a/ds/component/button/preview/build.gradle
+++ b/ds/component/button/preview/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace 'online.arapov.dsystems.component.button.impl'
+    namespace 'online.arapov.dsystems.component.button.preview'
     compileSdk 33
 
     defaultConfig {
@@ -42,10 +42,10 @@ dependencies {
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
     implementation composeBom
 
-    api project(':ds:component:button:public')
+    implementation project(':ds:component:button:impl')
     implementation project(':ds:core')
-    implementation project(':di-core')
-    implementation 'com.google.dagger:dagger:2.42'
+    implementation project(':ds:theme:alnf')
+    implementation project(':ds:theme:material')
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.activity:activity-compose:1.6.1'
