--- a/ds/component/promo_block/impl/build.gradle
+++ b/ds/component/promo_block/impl/build.gradle
@@ -34,7 +34,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.6'
+        kotlinCompilerExtensionVersion '1.3.2'
     }
 }
 
@@ -42,9 +42,10 @@ dependencies {
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
     implementation composeBom
 
+    api project(':ds:component:promo_block:public')
+
     implementation project(':ds:core')
     implementation project(':ds:component:button:public')
-    implementation project(':ds:component:promo_block:public')
     implementation project(':di-core')
     implementation 'com.google.dagger:dagger:2.42'
 
