--- a/feature/impl/build.gradle
+++ b/feature/impl/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'com.squareup.anvil'
 }
 
 android {
@@ -41,12 +42,15 @@ dependencies {
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
     implementation composeBom
 
-    implementation project(':ds:component:button')
-    implementation project(':ds:component:promo_block')
+    implementation project(':ds:component:button:public')
+    implementation project(':ds:component:promo_block:public')
     implementation project(':ds:theme:alnf')
     implementation project(':ds:theme:material')
     implementation project(':ds:core')
-    
+
+    implementation project(':di-core')
+    implementation 'com.google.dagger:dagger:2.45'
+
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.foundation:foundation"
     implementation "androidx.compose.ui:ui-tooling-preview"
