--- a/feature/preview/build.gradle
+++ b/feature/preview/build.gradle
@@ -1,11 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'com.squareup.anvil'
 }
 
 android {
-    namespace 'online.arapov.dsystems.component.button.impl'
+    namespace 'online.arapov.dsystems.feature.preview'
     compileSdk 33
 
     defaultConfig {
@@ -42,12 +41,14 @@ dependencies {
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
     implementation composeBom
 
-    api project(':ds:component:button:public')
-    implementation project(':ds:core')
-    implementation project(':di-core')
-    implementation 'com.google.dagger:dagger:2.42'
+    implementation project(':feature:impl')
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation project(':ds:component:button:impl')
+    implementation project(':ds:component:promo_block:impl')
+    implementation project(':ds:theme:alnf')
+    implementation project(':ds:theme:material')
+    implementation project(':ds:core')
+
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.foundation:foundation"
     implementation "androidx.compose.ui:ui-tooling-preview"
