--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,4 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 kotlin.build.report.output=file
-org.gradle.caching=false
+org.gradle.caching=true
